# McpQL

./: README.md
McpFC/: .gitignore  CODE_ASSISTANT_README.md  README.md  code_assistant_ui.py  mcp_client.py  mcp_server.py  pyproject.toml  run.py  setup_env.py  start_code_assistant.py
mcp_getting_started/: .env.example  McpClient.md  McpClient.py  README.md  main.py  pyproject.toml  search_client.py  web_search.py
